@@ -18,26 +18,26 @@
  */
 package org.apache.accumulo.server.util;
 
+import static java.nio.charset.StandardCharsets.UTF_8;
+
 import java.io.BufferedReader;
 import java.io.File;
 import java.io.FileReader;
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.Timer;
-import java.util.TimerTask;
+import java.util.concurrent.TimeUnit;
 
 import org.apache.accumulo.core.conf.AccumuloConfiguration;
 import org.apache.accumulo.core.conf.Property;
+import org.apache.accumulo.core.util.Halt;
+import org.apache.accumulo.core.util.threads.ThreadPools;
+import org.apache.accumulo.core.util.threads.Threads;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-
-import com.google.common.collect.Sets;
 
 import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
 
@@ -45,7 +45,7 @@ public class FileSystemMonitor {
   private static final String PROC_MOUNTS = "/proc/mounts";
   private static final Logger log = LoggerFactory.getLogger(FileSystemMonitor.class);
   private static final String DEVICE_PREFIX = "/dev/";
-  private static final Set<String> ACCEPTED_FILESYSTEMS = Sets.newHashSet("ext3", "ext4", "xfs");
+  private static final Set<String> ACCEPTED_FILESYSTEMS = Set.of("ext3", "ext4", "xfs");
 
   static class Mount {
     String device;
@@ -60,7 +60,7 @@ public class FileSystemMonitor {
       mountPoint = tokens[1].trim();
       filesystemType = tokens[2].trim().toLowerCase();
 
-      options = new HashSet<>(Arrays.asList(tokens[3].split(",")));
+      options = Set.of(tokens[3].split(","));
     }
 
     @Override
@@ -76,7 +76,7 @@ public class FileSystemMonitor {
       justification = "procFile path not from user input")
   static List<Mount> parse(String procFile) throws IOException {
 
-    FileReader fr = new FileReader(procFile);
+    FileReader fr = new FileReader(procFile, UTF_8);
 
     try (BufferedReader br = new BufferedReader(fr)) {
       return getMountsFromFile(br);
@@ -101,9 +101,11 @@ public class FileSystemMonitor {
 
   private Map<String,Boolean> readWriteFilesystems = new HashMap<>();
 
-  public FileSystemMonitor(final String procFile, long period) throws IOException {
+  public FileSystemMonitor(final String procFile, long period, AccumuloConfiguration conf)
+      throws IOException {
     List<Mount> mounts = parse(procFile);
 
+    // Populate readWriteFilesystems with the initial state of the mounts
     for (Mount mount : mounts) {
       if (mount.options.contains("rw"))
         readWriteFilesystems.put(mount.mountPoint, true);
@@ -113,52 +115,43 @@ public class FileSystemMonitor {
         throw new IOException("Filesystem " + mount + " does not have ro or rw option");
     }
 
-    TimerTask tt = new TimerTask() {
-      @Override
-      public void run() {
-        try {
-          checkMounts(procFile);
-        } catch (final Exception e) {
-          Halt.halt(-42, new Runnable() {
-            @Override
-            public void run() {
-              log.error("Exception while checking mount points, halting process", e);
+    // Create a task to check each mount periodically to see if its state has changed.
+    for (Mount mount : mounts) {
+      ThreadPools.createGeneralScheduledExecutorService(conf).scheduleWithFixedDelay(
+          Threads.createNamedRunnable(mount.mountPoint + "filesystem monitor", () -> {
+            try {
+              checkMount(mount);
+            } catch (final Exception e) {
+              Halt.halt(-42, new Runnable() {
+                @Override
+                public void run() {
+                  log.error("Exception while checking mount points, halting process", e);
+                }
+              });
             }
-          });
-        }
-      }
-    };
+          }), period, period, TimeUnit.MILLISECONDS);
 
-    // use a new Timer object instead of a shared one.
-    // trying to avoid the case where one the timers other
-    // task gets stuck because a FS went read only, and this task
-    // does not execute
-    Timer timer = new Timer("filesystem monitor timer", true);
-    timer.schedule(tt, period, period);
+    }
 
   }
 
-  protected void checkMounts(String procFile) throws Exception {
-    List<Mount> mounts = parse(procFile);
-
-    for (Mount mount : mounts) {
-      if (!readWriteFilesystems.containsKey(mount.mountPoint))
-        if (mount.options.contains("rw"))
-          readWriteFilesystems.put(mount.mountPoint, true);
-        else if (mount.options.contains("ro"))
-          readWriteFilesystems.put(mount.mountPoint, false);
-        else
-          throw new Exception("Filesystem " + mount + " does not have ro or rw option");
-      else if (mount.options.contains("ro") && readWriteFilesystems.get(mount.mountPoint))
-        throw new Exception("Filesystem " + mount.mountPoint + " switched to read only");
-    }
+  protected void checkMount(Mount mount) throws Exception {
+    if (!readWriteFilesystems.containsKey(mount.mountPoint))
+      if (mount.options.contains("rw"))
+        readWriteFilesystems.put(mount.mountPoint, true);
+      else if (mount.options.contains("ro"))
+        readWriteFilesystems.put(mount.mountPoint, false);
+      else
+        throw new Exception("Filesystem " + mount + " does not have ro or rw option");
+    else if (mount.options.contains("ro") && readWriteFilesystems.get(mount.mountPoint))
+      throw new Exception("Filesystem " + mount.mountPoint + " switched to read only");
   }
 
   public static void start(AccumuloConfiguration conf, Property prop) {
     if (conf.getBoolean(prop)) {
       if (new File(PROC_MOUNTS).exists()) {
         try {
-          new FileSystemMonitor(PROC_MOUNTS, 60000);
+          new FileSystemMonitor(PROC_MOUNTS, 60000, conf);
           log.info("Filesystem monitor started");
         } catch (IOException e) {
           log.error("Failed to initialize file system monitor", e);
