@@ -39,7 +39,6 @@ import java.io.PrintWriter;
 import java.lang.reflect.Constructor;
 import java.nio.file.Files;
 import java.nio.file.Paths;
-import java.security.SecureRandom;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Base64;
@@ -50,13 +49,12 @@ import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
-import java.util.Properties;
-import java.util.Random;
 import java.util.Set;
 import java.util.SortedSet;
 import java.util.TreeSet;
 import java.util.UUID;
 import java.util.concurrent.TimeUnit;
+import java.util.regex.Pattern;
 
 import org.apache.accumulo.core.Constants;
 import org.apache.accumulo.core.client.Accumulo;
@@ -94,14 +92,19 @@ import org.apache.accumulo.miniclusterImpl.MiniAccumuloConfigImpl;
 import org.apache.accumulo.shell.Shell;
 import org.apache.accumulo.test.categories.MiniClusterOnlyTests;
 import org.apache.accumulo.test.categories.SunnyDayTests;
+import org.apache.accumulo.test.compaction.TestCompactionStrategy;
 import org.apache.accumulo.test.functional.SlowIterator;
-import org.apache.accumulo.tracer.TraceServer;
 import org.apache.commons.io.FileUtils;
 import org.apache.hadoop.conf.Configuration;
 import org.apache.hadoop.fs.FileSystem;
 import org.apache.hadoop.fs.Path;
 import org.apache.hadoop.io.Text;
 import org.apache.hadoop.tools.DistCp;
+import org.jline.reader.LineReader;
+import org.jline.reader.LineReaderBuilder;
+import org.jline.terminal.Size;
+import org.jline.terminal.Terminal;
+import org.jline.terminal.impl.DumbTerminal;
 import org.junit.After;
 import org.junit.AfterClass;
 import org.junit.Assume;
@@ -118,10 +121,14 @@ import com.google.common.collect.Iterables;
 import com.google.common.collect.Iterators;
 
 import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
-import jline.console.ConsoleReader;
 
 @Category({MiniClusterOnlyTests.class, SunnyDayTests.class})
 public class ShellServerIT extends SharedMiniClusterBase {
+
+  @SuppressWarnings("removal")
+  private static final Property VFS_CONTEXT_CLASSPATH_PROPERTY =
+      Property.VFS_CONTEXT_CLASSPATH_PROPERTY;
+
   public static class TestOutputStream extends OutputStream {
     StringBuilder sb = new StringBuilder();
 
@@ -177,6 +184,8 @@ public class ShellServerIT extends SharedMiniClusterBase {
     public TestOutputStream output;
     public StringInputStream input;
     public Shell shell;
+    public LineReader reader;
+    public Terminal terminal;
 
     TestShell(String user, String rootPass, String instanceName, String zookeepers, File configFile)
         throws IOException {
@@ -184,7 +193,10 @@ public class ShellServerIT extends SharedMiniClusterBase {
       // start the shell
       output = new TestOutputStream();
       input = new StringInputStream();
-      shell = new Shell(new ConsoleReader(input, output));
+      terminal = new DumbTerminal(input, output);
+      terminal.setSize(new Size(80, 24));
+      reader = LineReaderBuilder.builder().terminal(terminal).build();
+      shell = new Shell(reader);
       shell.setLogErrorsToConsole();
       if (info.saslEnabled()) {
         // Pull the kerberos principal out when we're using SASL
@@ -271,13 +283,17 @@ public class ShellServerIT extends SharedMiniClusterBase {
             output.get().contains(s));
       shell.resetExitCode();
     }
+
+    void writeToHistory(String cmd) {
+      input.set(cmd);
+      reader.readLine();
+    }
   }
 
   private static final NoOpErrorMessageCallback noop = new NoOpErrorMessageCallback();
 
   private TestShell ts;
 
-  private static Process traceProcess;
   private static String rootPath;
 
   @Rule
@@ -290,7 +306,6 @@ public class ShellServerIT extends SharedMiniClusterBase {
       cfg.setNumTservers(1);
       // Set the min span to 0 so we will definitely get all the traces back. See ACCUMULO-4365
       Map<String,String> siteConf = cfg.getSiteConfig();
-      siteConf.put(Property.TRACE_SPAN_RECEIVER_PREFIX.getKey() + "tracer.span.min.ms", "0");
       cfg.setSiteConfig(siteConf);
     }
   }
@@ -306,16 +321,6 @@ public class ShellServerIT extends SharedMiniClusterBase {
     System.setProperty("HOME", rootPath);
     System.setProperty("hadoop.tmp.dir", userDir + "/target/hadoop-tmp");
 
-    traceProcess = getCluster().exec(TraceServer.class).getProcess();
-
-    Properties props = getCluster().getClientProperties();
-    try (AccumuloClient client = Accumulo.newClient().from(props).build()) {
-      TableOperations tops = client.tableOperations();
-      // give the tracer some time to start
-      while (!tops.exists("trace")) {
-        sleepUninterruptibly(1, TimeUnit.SECONDS);
-      }
-    }
   }
 
   @Before
@@ -327,10 +332,6 @@ public class ShellServerIT extends SharedMiniClusterBase {
 
   @AfterClass
   public static void tearDownAfterClass() {
-    if (traceProcess != null) {
-      traceProcess.destroy();
-    }
-
     SharedMiniClusterBase.stopMiniCluster();
   }
 
@@ -361,7 +362,8 @@ public class ShellServerIT extends SharedMiniClusterBase {
   @SuppressFBWarnings(value = "PATH_TRAVERSAL_IN", justification = "path provided by test")
   @Test
   public void exporttableImporttable() throws Exception {
-    final String table = name.getMethodName(), table2 = table + "2";
+    final String table = getUniqueNames(1)[0];
+    final String table2 = table + "2";
 
     // exporttable / importtable
     ts.exec("createtable " + table + " -evc", true);
@@ -392,7 +394,7 @@ public class ShellServerIT extends SharedMiniClusterBase {
 
       // Implement a poor-man's DistCp
       try (BufferedReader reader =
-          new BufferedReader(new FileReader(new File(exportDir, "distcp.txt")))) {
+          new BufferedReader(new FileReader(new File(exportDir, "distcp.txt"), UTF_8))) {
         for (String line; (line = reader.readLine()) != null;) {
           Path exportedFile = new Path(line);
           // There isn't a cp on FileSystem??
@@ -438,7 +440,7 @@ public class ShellServerIT extends SharedMiniClusterBase {
 
   @Test
   public void setscaniterDeletescaniter() throws Exception {
-    final String table = name.getMethodName();
+    final String table = getUniqueNames(1)[0];
 
     // setscaniter, deletescaniter
     ts.exec("createtable " + table);
@@ -468,7 +470,7 @@ public class ShellServerIT extends SharedMiniClusterBase {
 
   @Test
   public void egrep() throws Exception {
-    final String table = name.getMethodName();
+    final String table = getUniqueNames(1)[0];
 
     // egrep
     ts.exec("createtable " + table);
@@ -480,7 +482,7 @@ public class ShellServerIT extends SharedMiniClusterBase {
 
   @Test
   public void du() throws Exception {
-    final String table = name.getMethodName();
+    final String table = getUniqueNames(1)[0];
 
     // create and delete a table so we get out of a table context in the shell
     ts.exec("notable", true);
@@ -498,15 +500,14 @@ public class ShellServerIT extends SharedMiniClusterBase {
     ts.shell.execCommand("du -h", false, false);
     String o = ts.output.get();
     // for some reason, there's a bit of fluctuation
-    assertTrue("Output did not match regex: '" + o + "'",
-        o.matches(".*[1-9][0-9][0-9]\\s\\[" + table + "\\]\\n"));
+    assertMatches(o, ".*[1-9][0-9][0-9]\\s\\[" + table + "]\\n");
     ts.exec("deletetable -f " + table);
   }
 
   /*
    * This test should be deleted when the debug command is removed
    */
-  @Deprecated
+  @Deprecated(since = "2.0.0")
   @Test
   public void debug() throws Exception {
     String expectMsg = "The debug command is deprecated";
@@ -521,7 +522,7 @@ public class ShellServerIT extends SharedMiniClusterBase {
 
   @Test
   public void user() throws Exception {
-    final String table = name.getMethodName();
+    final String table = getUniqueNames(1)[0];
     final boolean kerberosEnabled = getToken() instanceof KerberosToken;
 
     // createuser, deleteuser, user, users, droptable, grant, revoke
@@ -563,7 +564,7 @@ public class ShellServerIT extends SharedMiniClusterBase {
 
   @Test
   public void durability() throws Exception {
-    final String table = name.getMethodName();
+    final String table = getUniqueNames(1)[0];
     ts.exec("createtable " + table);
     ts.exec("insert -d none a cf cq randomGunkaASDFWEAQRd");
     ts.exec("insert -d foo a cf cq2 2", false, "foo", true);
@@ -573,7 +574,7 @@ public class ShellServerIT extends SharedMiniClusterBase {
 
   @Test
   public void iter() throws Exception {
-    final String table = name.getMethodName();
+    final String table = getUniqueNames(1)[0];
 
     // setshelliter, listshelliter, deleteshelliter
     ts.exec("createtable " + table);
@@ -623,9 +624,10 @@ public class ShellServerIT extends SharedMiniClusterBase {
   @Test
   public void setIterOptionPrompt() throws Exception {
     try (AccumuloClient client = Accumulo.newClient().from(getClientProps()).build()) {
-      String tableName = name.getMethodName();
+      final String[] tableNames = getUniqueNames(4);
+      final String tableName0 = tableNames[0];
 
-      ts.exec("createtable " + tableName);
+      ts.exec("createtable " + tableName0);
       ts.input.set("\n\n");
       // Setting a non-optiondescriber with no name should fail
       ts.exec("setiter -scan -class " + COLUMN_FAMILY_COUNTER_ITERATOR + " -p 30", false);
@@ -637,12 +639,13 @@ public class ShellServerIT extends SharedMiniClusterBase {
       String expectedKey = "table.iterator.scan.cfcounter";
       String expectedValue = "30," + COLUMN_FAMILY_COUNTER_ITERATOR;
       TableOperations tops = client.tableOperations();
-      checkTableForProperty(tops, tableName, expectedKey, expectedValue);
+      checkTableForProperty(tops, tableName0, expectedKey, expectedValue);
 
-      ts.exec("deletetable " + tableName, true);
-      tableName = tableName + "1";
+      ts.exec("deletetable " + tableName0, true);
 
-      ts.exec("createtable " + tableName, true);
+      final String tableName1 = tableNames[1];
+
+      ts.exec("createtable " + tableName1, true);
 
       ts.input.set("customcfcounter\n\n");
 
@@ -650,12 +653,13 @@ public class ShellServerIT extends SharedMiniClusterBase {
       ts.exec("setiter -scan -class " + COLUMN_FAMILY_COUNTER_ITERATOR + " -p 30", true);
       expectedKey = "table.iterator.scan.customcfcounter";
       expectedValue = "30," + COLUMN_FAMILY_COUNTER_ITERATOR;
-      checkTableForProperty(tops, tableName, expectedKey, expectedValue);
+      checkTableForProperty(tops, tableName1, expectedKey, expectedValue);
 
-      ts.exec("deletetable " + tableName, true);
-      tableName = tableName + "1";
+      ts.exec("deletetable " + tableName1, true);
 
-      ts.exec("createtable " + tableName, true);
+      final String tableName2 = tableNames[2];
+
+      ts.exec("createtable " + tableName2, true);
 
       ts.input.set("customcfcounter\nname1 value1\nname2 value2\n\n");
 
@@ -663,18 +667,19 @@ public class ShellServerIT extends SharedMiniClusterBase {
       ts.exec("setiter -scan -class " + COLUMN_FAMILY_COUNTER_ITERATOR + " -p 30", true);
       expectedKey = "table.iterator.scan.customcfcounter";
       expectedValue = "30," + COLUMN_FAMILY_COUNTER_ITERATOR;
-      checkTableForProperty(tops, tableName, expectedKey, expectedValue);
+      checkTableForProperty(tops, tableName2, expectedKey, expectedValue);
       expectedKey = "table.iterator.scan.customcfcounter.opt.name1";
       expectedValue = "value1";
-      checkTableForProperty(tops, tableName, expectedKey, expectedValue);
+      checkTableForProperty(tops, tableName2, expectedKey, expectedValue);
       expectedKey = "table.iterator.scan.customcfcounter.opt.name2";
       expectedValue = "value2";
-      checkTableForProperty(tops, tableName, expectedKey, expectedValue);
+      checkTableForProperty(tops, tableName2, expectedKey, expectedValue);
 
-      ts.exec("deletetable " + tableName, true);
-      tableName = tableName + "1";
+      ts.exec("deletetable " + tableName2, true);
 
-      ts.exec("createtable " + tableName, true);
+      String tableName3 = tableNames[3];
+
+      ts.exec("createtable " + tableName3, true);
 
       ts.input.set("\nname1 value1.1,value1.2,value1.3\nname2 value2\n\n");
 
@@ -683,13 +688,16 @@ public class ShellServerIT extends SharedMiniClusterBase {
           true);
       expectedKey = "table.iterator.scan.cfcounter";
       expectedValue = "30," + COLUMN_FAMILY_COUNTER_ITERATOR;
-      checkTableForProperty(tops, tableName, expectedKey, expectedValue);
+      checkTableForProperty(tops, tableName3, expectedKey, expectedValue);
       expectedKey = "table.iterator.scan.cfcounter.opt.name1";
       expectedValue = "value1.1,value1.2,value1.3";
-      checkTableForProperty(tops, tableName, expectedKey, expectedValue);
+      checkTableForProperty(tops, tableName3, expectedKey, expectedValue);
       expectedKey = "table.iterator.scan.cfcounter.opt.name2";
       expectedValue = "value2";
-      checkTableForProperty(tops, tableName, expectedKey, expectedValue);
+      checkTableForProperty(tops, tableName3, expectedKey, expectedValue);
+
+      ts.exec("deletetable " + tableName3, true);
+
     }
   }
 
@@ -711,7 +719,7 @@ public class ShellServerIT extends SharedMiniClusterBase {
 
   @Test
   public void notable() throws Exception {
-    final String table = name.getMethodName();
+    final String table = getUniqueNames(1)[0];
 
     // notable
     ts.exec("createtable " + table, true);
@@ -735,7 +743,7 @@ public class ShellServerIT extends SharedMiniClusterBase {
 
   @Test
   public void addauths() throws Exception {
-    final String table = name.getMethodName();
+    final String table = getUniqueNames(1)[0];
     // addauths
     ts.exec("createtable " + table + " -evc");
     boolean success = false;
@@ -837,13 +845,14 @@ public class ShellServerIT extends SharedMiniClusterBase {
   public void classpath() throws Exception {
     // classpath
     ts.exec("classpath", true,
-        "Level 2: Java Classloader (loads everything defined by java classpath)", true);
+        "Level: 2, Name: app, class: jdk.internal.loader.ClassLoaders$AppClassLoader: configuration not inspectable",
+        true);
   }
 
   @Test
   public void clearCls() throws Exception {
     // clear/cls
-    if (ts.shell.getReader().getTerminal().isAnsiSupported()) {
+    if (!Terminal.TYPE_DUMB.equalsIgnoreCase(ts.shell.getTerminal().getType())) {
       ts.exec("cls", true, "[1;1H");
       ts.exec("clear", true, "[2J");
     } else {
@@ -854,7 +863,8 @@ public class ShellServerIT extends SharedMiniClusterBase {
 
   @Test
   public void clonetable() throws Exception {
-    final String table = name.getMethodName(), clone = table + "_clone";
+    final String table = getUniqueNames(1)[0];
+    final String clone = table + "_clone";
 
     // clonetable
     ts.exec("createtable " + table + " -evc");
@@ -875,7 +885,8 @@ public class ShellServerIT extends SharedMiniClusterBase {
 
   @Test
   public void clonetableOffline() throws Exception {
-    final String table = name.getMethodName(), clone = table + "_clone";
+    final String table = getUniqueNames(1)[0];
+    final String clone = table + "_clone";
 
     // clonetable
     ts.exec("createtable " + table + " -evc");
@@ -896,7 +907,7 @@ public class ShellServerIT extends SharedMiniClusterBase {
 
   @Test
   public void createTableWithProperties() throws Exception {
-    final String table = name.getMethodName();
+    final String table = getUniqueNames(1)[0];
 
     // create table with initial properties
     String testProp = "table.custom.description=description,table.custom.testProp=testProp,"
@@ -907,24 +918,23 @@ public class ShellServerIT extends SharedMiniClusterBase {
     ts.exec("scan", true, "value", true);
 
     try (AccumuloClient accumuloClient = Accumulo.newClient().from(getClientProps()).build()) {
-      for (Entry<String,String> entry : accumuloClient.tableOperations().getProperties(table)) {
-        if (entry.getKey().equals("table.custom.description"))
-          assertEquals("Initial property was not set correctly", "description", entry.getValue());
+      accumuloClient.tableOperations().getConfiguration(table).forEach((key, value) -> {
+        if (key.equals("table.custom.description"))
+          assertEquals("Initial property was not set correctly", "description", value);
 
-        if (entry.getKey().equals("table.custom.testProp"))
-          assertEquals("Initial property was not set correctly", "testProp", entry.getValue());
+        if (key.equals("table.custom.testProp"))
+          assertEquals("Initial property was not set correctly", "testProp", value);
 
-        if (entry.getKey().equals(Property.TABLE_SPLIT_THRESHOLD.getKey()))
-          assertEquals("Initial property was not set correctly", "10K", entry.getValue());
-
-      }
+        if (key.equals(Property.TABLE_SPLIT_THRESHOLD.getKey()))
+          assertEquals("Initial property was not set correctly", "10K", value);
+      });
     }
     ts.exec("deletetable -f " + table);
   }
 
   @Test
   public void testCompactions() throws Exception {
-    final String table = name.getMethodName();
+    final String table = getUniqueNames(1)[0];
 
     // compact
     ts.exec("createtable " + table);
@@ -973,7 +983,7 @@ public class ShellServerIT extends SharedMiniClusterBase {
 
   @Test
   public void testCompactionSelection() throws Exception {
-    final String table = name.getMethodName();
+    final String table = getUniqueNames(1)[0];
     final String clone = table + "_clone";
 
     ts.exec("createtable " + table);
@@ -1009,11 +1019,8 @@ public class ShellServerIT extends SharedMiniClusterBase {
     assertEquals(2, countFiles(cloneId));
 
     // create two large files
-    Random rand = new SecureRandom();
     StringBuilder sb = new StringBuilder("insert b v q ");
-    for (int i = 0; i < 10000; i++) {
-      sb.append('a' + rand.nextInt(26));
-    }
+    random.ints(10_000, 0, 26).forEach(i -> sb.append('a' + i));
 
     ts.exec(sb.toString());
     ts.exec("flush -w");
@@ -1090,7 +1097,7 @@ public class ShellServerIT extends SharedMiniClusterBase {
   @Test
   public void testCompactionSelectionAndStrategy() throws Exception {
 
-    final String table = name.getMethodName();
+    final String table = getUniqueNames(1)[0];
 
     ts.exec("createtable " + table);
 
@@ -1101,7 +1108,7 @@ public class ShellServerIT extends SharedMiniClusterBase {
 
   @Test
   public void testScanScample() throws Exception {
-    final String table = name.getMethodName();
+    final String table = getUniqueNames(1)[0];
 
     // compact
     ts.exec("createtable " + table);
@@ -1151,7 +1158,7 @@ public class ShellServerIT extends SharedMiniClusterBase {
 
   @Test
   public void constraint() throws Exception {
-    final String table = name.getMethodName();
+    final String table = getUniqueNames(1)[0];
 
     // constraint
     ts.exec("constraint -l -t " + MetadataTable.NAME + "", true, "MetadataConstraints=1", true);
@@ -1170,7 +1177,7 @@ public class ShellServerIT extends SharedMiniClusterBase {
 
   @Test
   public void deletemany() throws Exception {
-    final String table = name.getMethodName();
+    final String table = getUniqueNames(1)[0];
 
     // deletemany
     ts.exec("createtable " + table);
@@ -1199,7 +1206,7 @@ public class ShellServerIT extends SharedMiniClusterBase {
 
   @Test
   public void deleterows() throws Exception {
-    final String table = name.getMethodName();
+    final String table = getUniqueNames(1)[0];
 
     ts.exec("createtable " + table);
     final String tableId = getTableId(table);
@@ -1238,7 +1245,7 @@ public class ShellServerIT extends SharedMiniClusterBase {
 
   @Test
   public void groups() throws Exception {
-    final String table = name.getMethodName();
+    final String table = getUniqueNames(1)[0];
 
     ts.exec("createtable " + table);
     ts.exec("setgroups -t " + table + " alpha=a,b,c num=3,2,1");
@@ -1257,10 +1264,10 @@ public class ShellServerIT extends SharedMiniClusterBase {
     ts.exec("insert row2 cf1 cq 2468ace", true);
 
     ArrayList<String> expectedDefault = new ArrayList<>(4);
-    expectedDefault.add("row cf:cq []    1234abcd");
-    expectedDefault.add("row cf1:cq1 []    9876fedc");
-    expectedDefault.add("row2 cf:cq []    13579bdf");
-    expectedDefault.add("row2 cf1:cq []    2468ace");
+    expectedDefault.add("row cf:cq []\t1234abcd");
+    expectedDefault.add("row cf1:cq1 []\t9876fedc");
+    expectedDefault.add("row2 cf:cq []\t13579bdf");
+    expectedDefault.add("row2 cf1:cq []\t2468ace");
     ArrayList<String> actualDefault = new ArrayList<>(4);
     boolean isFirst = true;
     for (String s : ts.exec("scan -np", true).split("[\n\r]+")) {
@@ -1272,10 +1279,10 @@ public class ShellServerIT extends SharedMiniClusterBase {
     }
 
     ArrayList<String> expectedFormatted = new ArrayList<>(4);
-    expectedFormatted.add("row cf:cq []    0x31 0x32 0x33 0x34 0x61 0x62 0x63 0x64");
-    expectedFormatted.add("row cf1:cq1 []    0x39 0x38 0x37 0x36 0x66 0x65 0x64 0x63");
-    expectedFormatted.add("row2 cf:cq []    0x31 0x33 0x35 0x37 0x39 0x62 0x64 0x66");
-    expectedFormatted.add("row2 cf1:cq []    0x32 0x34 0x36 0x38 0x61 0x63 0x65");
+    expectedFormatted.add("row cf:cq []\t0x31 0x32 0x33 0x34 0x61 0x62 0x63 0x64");
+    expectedFormatted.add("row cf1:cq1 []\t0x39 0x38 0x37 0x36 0x66 0x65 0x64 0x63");
+    expectedFormatted.add("row2 cf:cq []\t0x31 0x33 0x35 0x37 0x39 0x62 0x64 0x66");
+    expectedFormatted.add("row2 cf1:cq []\t0x32 0x34 0x36 0x38 0x61 0x63 0x65");
     ts.exec("formatter -t formatter_test -f " + HexFormatter.class.getName(), true);
     ArrayList<String> actualFormatted = new ArrayList<>(4);
     isFirst = true;
@@ -1379,7 +1386,7 @@ public class ShellServerIT extends SharedMiniClusterBase {
 
   @Test
   public void grep() throws Exception {
-    final String table = name.getMethodName();
+    final String table = getUniqueNames(1)[0];
 
     ts.exec("createtable " + table, true);
     make10();
@@ -1408,29 +1415,85 @@ public class ShellServerIT extends SharedMiniClusterBase {
 
   @Test
   public void history() throws Exception {
-    final String table = name.getMethodName();
+    final String table = getUniqueNames(1)[0];
 
+    // test clear history command works
+    ts.writeToHistory("foo");
+    ts.exec("history", true, "foo", true);
     ts.exec("history -c", true);
-    ts.exec("createtable " + table);
-    ts.exec("deletetable -f " + table);
-    ts.exec("history", true, table, true);
-    ts.exec("history", true, "history", true);
+    ts.exec("history", true, "foo", false);
+
+    // Verify commands are not currently in history then write to history file. Does not execute
+    // table ops.
+    ts.exec("history", true, table, false);
+    ts.exec("history", true, "createtable", false);
+    ts.exec("history", true, "deletetable", false);
+    ts.writeToHistory("createtable " + table);
+    ts.writeToHistory("deletetable -f " + table);
+
+    // test that history command prints contents of history file
+    ts.exec("history", true, "createtable " + table, true);
+    ts.exec("history", true, "deletetable -f " + table, true);
   }
 
   @SuppressFBWarnings(value = "PATH_TRAVERSAL_IN", justification = "path provided by test")
   @Test
-  public void importDirectory() throws Exception {
-    final String table = name.getMethodName();
-
+  public void importDirectoryOld() throws Exception {
+    final String table = getUniqueNames(1)[0];
     Configuration conf = new Configuration();
     FileSystem fs = FileSystem.get(conf);
-    File importDir = new File(rootPath, "import");
+    File errorsDir = new File(rootPath, "errors_" + table);
+    assertTrue(errorsDir.mkdir());
+    fs.mkdirs(new Path(errorsDir.toString()));
+    File importDir = createRFiles(conf, fs, table);
+    ts.exec("createtable " + table, true);
+    ts.exec("importdirectory " + importDir + " " + errorsDir + " true", true);
+    ts.exec("scan -r 00000000", true, "00000000", true);
+    ts.exec("scan -r 00000099", true, "00000099", true);
+    ts.exec("deletetable -f " + table);
+  }
+
+  @Test
+  public void importDirectory() throws Exception {
+    final String table = getUniqueNames(1)[0];
+    Configuration conf = new Configuration();
+    FileSystem fs = FileSystem.get(conf);
+    File importDir = createRFiles(conf, fs, table);
+    ts.exec("createtable " + table, true);
+    ts.exec("importdirectory " + importDir + " true", true);
+    ts.exec("scan -r 00000000", true, "00000000", true);
+    ts.exec("scan -r 00000099", true, "00000099", true);
+    ts.exec("deletetable -f " + table);
+  }
+
+  @SuppressFBWarnings(value = "PATH_TRAVERSAL_IN", justification = "path provided by test")
+  @Test
+  public void importDirectoryWithOptions() throws Exception {
+    final String table = getUniqueNames(1)[0];
+    Configuration conf = new Configuration();
+    FileSystem fs = FileSystem.get(conf);
+    File importDir = createRFiles(conf, fs, table);
+    ts.exec("createtable " + table, true);
+    ts.exec("notable", true);
+    ts.exec("importdirectory -t " + table + " -i " + importDir + " true", true);
+    ts.exec("scan -t " + table + " -r 00000000", true, "00000000", true);
+    ts.exec("scan -t " + table + " -r 00000099", true, "00000099", true);
+    // Attempt to re-import without -i option, error should occur
+    ts.exec("importdirectory -t " + table + " " + importDir + " true", false);
+    // Attempt re-import once more, this time with -i option. No error should occur, only a
+    // message indicating the directory was empty and zero files were imported
+    ts.exec("importdirectory -t " + table + " -i " + importDir + " true", true);
+    ts.exec("scan -t " + table + " -r 00000000", true, "00000000", true);
+    ts.exec("scan -t " + table + " -r 00000099", true, "00000099", true);
+    ts.exec("deletetable -f " + table);
+  }
+
+  private File createRFiles(final Configuration conf, final FileSystem fs, final String postfix)
+      throws IOException {
+    File importDir = new File(rootPath, "import_" + postfix);
     assertTrue(importDir.mkdir());
     String even = new File(importDir, "even.rf").toString();
     String odd = new File(importDir, "odd.rf").toString();
-    File errorsDir = new File(rootPath, "errors");
-    assertTrue(errorsDir.mkdir());
-    fs.mkdirs(new Path(errorsDir.toString()));
     AccumuloConfiguration aconf = DefaultConfiguration.getInstance();
     FileSKVWriter evenWriter = FileOperations.getInstance().newWriterBuilder()
         .forFile(even, fs, conf, CryptoServiceFactory.newDefaultInstance())
@@ -1453,11 +1516,7 @@ public class ShellServerIT extends SharedMiniClusterBase {
     evenWriter.close();
     oddWriter.close();
     assertEquals(0, ts.shell.getExitCode());
-    ts.exec("createtable " + table, true);
-    ts.exec("importdirectory " + importDir + " " + errorsDir + " true", true);
-    ts.exec("scan -r 00000000", true, "00000000", true);
-    ts.exec("scan -r 00000099", true, "00000099", true);
-    ts.exec("deletetable -f " + table);
+    return importDir;
   }
 
   @Test
@@ -1467,7 +1526,7 @@ public class ShellServerIT extends SharedMiniClusterBase {
 
   @Test
   public void interpreter() throws Exception {
-    final String table = name.getMethodName();
+    final String table = getUniqueNames(1)[0];
 
     ts.exec("createtable " + table, true);
     ts.exec("interpreter -l", true, "HexScan", false);
@@ -1484,7 +1543,7 @@ public class ShellServerIT extends SharedMiniClusterBase {
 
   @Test
   public void listcompactions() throws Exception {
-    final String table = name.getMethodName();
+    final String table = getUniqueNames(1)[0];
 
     ts.exec("createtable " + table, true);
     ts.exec(
@@ -1508,7 +1567,7 @@ public class ShellServerIT extends SharedMiniClusterBase {
 
   @Test
   public void maxrow() throws Exception {
-    final String table = name.getMethodName();
+    final String table = getUniqueNames(1)[0];
 
     ts.exec("createtable " + table, true);
     ts.exec("insert a cf cq value", true);
@@ -1523,7 +1582,7 @@ public class ShellServerIT extends SharedMiniClusterBase {
 
   @Test
   public void merge() throws Exception {
-    final String table = name.getMethodName();
+    final String table = getUniqueNames(1)[0];
 
     ts.exec("createtable " + table);
     ts.exec("addsplits a m z");
@@ -1555,7 +1614,9 @@ public class ShellServerIT extends SharedMiniClusterBase {
 
   @Test
   public void renametable() throws Exception {
-    final String table = name.getMethodName() + "1", rename = name.getMethodName() + "2";
+    final String[] tableNames = getUniqueNames(2);
+    final String table = tableNames[0];
+    final String rename = tableNames[1];
 
     ts.exec("createtable " + table);
     ts.exec("insert this is a value");
@@ -1568,7 +1629,10 @@ public class ShellServerIT extends SharedMiniClusterBase {
 
   @Test
   public void tables() throws Exception {
-    final String table = name.getMethodName(), table1 = table + "_z", table2 = table + "_a";
+    final String table = getUniqueNames(1)[0];
+    // table sort order is part of test.
+    final String table1 = table + "_z";
+    final String table2 = table + "_a";
     ts.exec("createtable " + table1);
     ts.exec("createtable " + table2);
     ts.exec("notable");
@@ -1588,7 +1652,7 @@ public class ShellServerIT extends SharedMiniClusterBase {
 
   @Test
   public void listscans() throws Exception {
-    final String table = name.getMethodName();
+    final String table = getUniqueNames(1)[0];
 
     ts.exec("createtable " + table, true);
 
@@ -1639,21 +1703,36 @@ public class ShellServerIT extends SharedMiniClusterBase {
         // TODO: any way to tell if the client address is accurate? could be local IP, host,
         // loopback...?
         String hostPortPattern = ".+:\\d+";
-        assertTrue(tserver.matches(hostPortPattern));
+        assertMatches(tserver, hostPortPattern);
         assertTrue(accumuloClient.instanceOperations().getTabletServers().contains(tserver));
         String client = parts[1].trim();
-        assertTrue(client + " does not match " + hostPortPattern, client.matches(hostPortPattern));
+        assertMatches(client, hostPortPattern);
         // Scan ID should be a long (throwing an exception if it fails to parse)
-        Long.parseLong(parts[11].trim());
+        Long r = Long.parseLong(parts[11].trim());
+        assertNotNull(r);
       }
     }
     ts.exec("deletetable -f " + table, true);
   }
 
-  @SuppressFBWarnings(value = "PATH_TRAVERSAL_IN", justification = "path provided by test")
   @Test
-  public void testPertableClasspath() throws Exception {
-    final String table = name.getMethodName();
+  public void testPerTableClasspathLegacyJar() throws Exception {
+
+    File fooConstraintJar = initJar("/FooConstraint.jar");
+
+    verifyPerTableClasspath(fooConstraintJar);
+  }
+
+  @Test
+  public void testPerTableClasspath_2_1_Jar() throws Exception {
+
+    File fooConstraintJar = initJar("/FooConstraint_2_1.jar");
+
+    verifyPerTableClasspath(fooConstraintJar);
+  }
+
+  public void verifyPerTableClasspath(final File fooConstraintJar) throws IOException {
+    final String table = getUniqueNames(1)[0];
 
     File fooFilterJar = File.createTempFile("FooFilter", ".jar", new File(rootPath));
 
@@ -1661,16 +1740,12 @@ public class ShellServerIT extends SharedMiniClusterBase {
         fooFilterJar);
     fooFilterJar.deleteOnExit();
 
-    File fooConstraintJar = File.createTempFile("FooConstraint", ".jar", new File(rootPath));
-    FileUtils.copyInputStreamToFile(this.getClass().getResourceAsStream("/FooConstraint.jar"),
-        fooConstraintJar);
-    fooConstraintJar.deleteOnExit();
-
-    ts.exec("config -s " + Property.VFS_CONTEXT_CLASSPATH_PROPERTY.getKey() + "cx1="
-        + fooFilterJar.toURI() + "," + fooConstraintJar.toURI(), true);
+    ts.exec("config -s " + VFS_CONTEXT_CLASSPATH_PROPERTY.getKey() + "cx1=" + fooFilterJar.toURI()
+        + "," + fooConstraintJar.toURI(), true);
 
     ts.exec("createtable " + table, true);
-    ts.exec("config -t " + table + " -s " + Property.TABLE_CLASSPATH.getKey() + "=cx1", true);
+    ts.exec("config -t " + table + " -s " + Property.TABLE_CLASSLOADER_CONTEXT.getKey() + "=cx1",
+        true);
 
     sleepUninterruptibly(200, TimeUnit.MILLISECONDS);
 
@@ -1696,26 +1771,17 @@ public class ShellServerIT extends SharedMiniClusterBase {
     ts.exec("insert ok foo q v", true);
 
     ts.exec("deletetable -f " + table, true);
-    ts.exec("config -d " + Property.VFS_CONTEXT_CLASSPATH_PROPERTY.getKey() + "cx1");
+    ts.exec("config -d " + VFS_CONTEXT_CLASSPATH_PROPERTY.getKey() + "cx1");
 
   }
 
-  @Test
-  public void trace() throws Exception {
-    // Make sure to not collide with the "trace" table
-    final String table = name.getMethodName() + "Test";
+  private File initJar(final String jarPath) throws IOException {
 
-    ts.exec("trace on", true);
-    ts.exec("createtable " + table, true);
-    ts.exec("insert a b c value", true);
-    ts.exec("scan -np", true, "value", true);
-    ts.exec("deletetable -f " + table);
-    ts.exec("sleep 1");
-    String trace = ts.exec("trace off");
-    System.out.println(trace);
-    assertTrue(trace.contains("sendMutations"));
-    assertTrue(trace.contains("startScan"));
-    assertTrue(trace.contains("DeleteTable"));
+    File fooConstraintJar = File.createTempFile("FooConstraint", ".jar", new File(rootPath));
+    FileUtils.copyInputStreamToFile(this.getClass().getResourceAsStream(jarPath), fooConstraintJar);
+    fooConstraintJar.deleteOnExit();
+
+    return fooConstraintJar;
   }
 
   @Test
@@ -1729,74 +1795,82 @@ public class ShellServerIT extends SharedMiniClusterBase {
 
   @Test
   public void namespaces() throws Exception {
+    final String[] names = getUniqueNames(5);
+
+    final String tableName = names[0];
+    final String ns_1 = names[1];
+    final String ns_2 = names[2];
+    final String ns_3 = names[3];
+    final String ns_4 = names[4];
+
     ts.exec("namespaces", true, "\"\"", true); // default namespace, displayed as quoted empty
                                                // string
     ts.exec("namespaces", true, Namespace.ACCUMULO.name(), true);
-    ts.exec("createnamespace thing1", true);
+    ts.exec("createnamespace " + ns_1, true);
     String namespaces = ts.exec("namespaces");
-    assertTrue(namespaces.contains("thing1"));
+    assertTrue(namespaces.contains(ns_1));
 
-    ts.exec("renamenamespace thing1 thing2");
+    ts.exec("renamenamespace " + ns_1 + " " + ns_2);
     namespaces = ts.exec("namespaces");
-    assertTrue(namespaces.contains("thing2"));
-    assertTrue(!namespaces.contains("thing1"));
+    assertTrue(namespaces.contains(ns_2));
+    assertFalse(namespaces.contains(ns_1));
 
     // can't delete a namespace that still contains tables, unless you do -f
-    ts.exec("createtable thing2.thingy", true);
-    ts.exec("deletenamespace thing2");
+    ts.exec("createtable " + ns_2 + "." + tableName, true);
+    ts.exec("deletenamespace " + ns_2);
     ts.exec("y");
-    ts.exec("namespaces", true, "thing2", true);
+    ts.exec("namespaces", true, ns_2, true);
 
-    ts.exec("du -ns thing2", true, "thing2.thingy", true);
+    ts.exec("du -ns " + ns_2, true, ns_2 + "." + tableName, true);
 
     // all "TableOperation" commands can take a namespace
-    ts.exec("offline -ns thing2", true);
-    ts.exec("online -ns thing2", true);
-    ts.exec("flush -ns thing2", true);
-    ts.exec("compact -ns thing2", true);
-    ts.exec("createnamespace testers3", true);
-    ts.exec("createtable testers3.1", true);
-    ts.exec("createtable testers3.2", true);
-    ts.exec("deletetable -ns testers3 -f", true);
-    ts.exec("tables", true, "testers3.1", false);
-    ts.exec("namespaces", true, "testers3", true);
-    ts.exec("deletenamespace testers3 -f", true);
+    ts.exec("offline -ns " + ns_2, true);
+    ts.exec("online -ns " + ns_2, true);
+    ts.exec("flush -ns " + ns_2, true);
+    ts.exec("compact -ns " + ns_2, true);
+    ts.exec("createnamespace " + ns_3, true);
+    ts.exec("createtable " + ns_3 + ".1", true);
+    ts.exec("createtable " + ns_3 + ".2", true);
+    ts.exec("deletetable -ns " + ns_3 + " -f", true);
+    ts.exec("tables", true, ns_3 + ".1", false);
+    ts.exec("namespaces", true, ns_3, true);
+    ts.exec("deletenamespace " + ns_3 + " -f", true);
     ts.input.set("true\n\n\n\nSTRING\n");
-    ts.exec("setiter -ns thing2 -scan -class " + SUMMING_COMBINER_ITERATOR + " -p 10 -n name",
+    ts.exec("setiter -ns " + ns_2 + " -scan -class " + SUMMING_COMBINER_ITERATOR + " -p 10 -n name",
         true);
-    ts.exec("listiter -ns thing2 -scan", true, "Summing", true);
-    ts.exec("deleteiter -ns thing2 -n name -scan", true);
+    ts.exec("listiter -ns " + ns_2 + " -scan", true, "Summing", true);
+    ts.exec("deleteiter -ns " + ns_2 + " -n name -scan", true);
     ts.exec("createuser dude");
     ts.exec("pass");
     ts.exec("pass");
-    ts.exec("grant Namespace.CREATE_TABLE -ns thing2 -u dude", true);
-    ts.exec("revoke Namespace.CREATE_TABLE -ns thing2 -u dude", true);
+    ts.exec("grant Namespace.CREATE_TABLE -ns " + ns_2 + " -u dude", true);
+    ts.exec("revoke Namespace.CREATE_TABLE -ns " + ns_2 + " -u dude", true);
 
     // properties override and such
-    ts.exec("config -ns thing2 -s table.file.max=44444", true);
-    ts.exec("config -ns thing2", true, "44444", true);
-    ts.exec("config -t thing2.thingy", true, "44444", true);
-    ts.exec("config -t thing2.thingy -s table.file.max=55555", true);
-    ts.exec("config -t thing2.thingy", true, "55555", true);
+    ts.exec("config -ns " + ns_2 + " -s table.file.max=44444", true);
+    ts.exec("config -ns " + ns_2, true, "44444", true);
+    ts.exec("config -t " + ns_2 + "." + tableName, true, "44444", true);
+    ts.exec("config -t " + ns_2 + "." + tableName + " -s table.file.max=55555", true);
+    ts.exec("config -t " + ns_2 + "." + tableName, true, "55555", true);
 
     // can copy properties when creating
-    ts.exec("createnamespace thing3 -cc thing2", true);
-    ts.exec("config -ns thing3", true, "44444", true);
+    ts.exec("createnamespace " + ns_4 + " -cc " + ns_2, true);
+    ts.exec("config -ns " + ns_4, true, "44444", true);
 
-    ts.exec("deletenamespace -f thing2", true);
-    ts.exec("namespaces", true, "thing2", false);
-    ts.exec("tables", true, "thing2.thingy", false);
+    ts.exec("deletenamespace -f " + ns_2, true);
+    ts.exec("namespaces", true, ns_2, false);
+    ts.exec("tables", true, ns_2 + "." + tableName, false);
 
     // put constraints on a namespace
-    ts.exec("constraint -ns thing3 -a org.apache.accumulo.test.constraints.NumericValueConstraint",
-        true);
-    ts.exec("createtable thing3.constrained", true);
-    ts.exec("table thing3.constrained", true);
+    ts.exec("constraint -ns " + ns_4
+        + " -a org.apache.accumulo.test.constraints.NumericValueConstraint", true);
+    ts.exec("createtable " + ns_4 + ".constrained", true);
+    ts.exec("table " + ns_4 + ".constrained", true);
     ts.exec("constraint -d 1");
     // should fail
     ts.exec("constraint -l", true, "NumericValueConstraint", true);
     ts.exec("insert r cf cq abc", false);
-    ts.exec("constraint -ns thing3 -d 1");
+    ts.exec("constraint -ns " + ns_4 + " -d 1");
     ts.exec("sleep 1");
     ts.exec("insert r cf cq abc", true);
   }
@@ -1826,30 +1900,46 @@ public class ShellServerIT extends SharedMiniClusterBase {
   }
 
   @Test
+  public void scansWithColon() throws Exception {
+    ts.exec("createtable twithcolontest");
+    ts.exec("insert row c:f cq value");
+    ts.exec("scan -r row -cf c:f", true, "value");
+    ts.exec("scan -b row -cf c:f  -cq cq -e row", true, "value");
+    ts.exec("scan -b row -c cf -cf c:f  -cq cq -e row", false, "mutually exclusive");
+    ts.exec("scan -b row -cq col1 -e row", false, "Option -cf is required when using -cq");
+    ts.exec("deletetable -f twithcolontest");
+  }
+
+  @Test
   public void scansWithClassLoaderContext() throws IOException {
+
     try {
-      Class.forName(VALUE_REVERSING_ITERATOR);
+      var clazzName = Class.forName(VALUE_REVERSING_ITERATOR);
+      log.warn("Found {} on classpath - failing test", clazzName);
       fail("ValueReversingIterator already on the classpath");
     } catch (ClassNotFoundException e) {
       // expected; iterator is already on the class path
     }
-    ts.exec("createtable t");
+
+    final String tableName = getUniqueNames(1)[0];
+
+    ts.exec("createtable " + tableName);
     // Assert that the TabletServer does not know anything about our class
-    String result =
-        ts.exec("setiter -scan -n reverse -t t -p 21 -class " + VALUE_REVERSING_ITERATOR);
+    String result = ts.exec(
+        "setiter -scan -n reverse -t " + tableName + " -p 21 -class " + VALUE_REVERSING_ITERATOR);
     assertTrue(result.contains("class not found"));
     make10();
     setupFakeContextPath();
     // Add the context to the table so that setiter works.
-    result = ts.exec("config -s " + Property.VFS_CONTEXT_CLASSPATH_PROPERTY + FAKE_CONTEXT + "="
+    result = ts.exec("config -s " + VFS_CONTEXT_CLASSPATH_PROPERTY + FAKE_CONTEXT + "="
         + FAKE_CONTEXT_CLASSPATH);
-    assertEquals("root@miniInstance t> config -s " + Property.VFS_CONTEXT_CLASSPATH_PROPERTY
+    assertEquals("root@miniInstance " + tableName + "> config -s " + VFS_CONTEXT_CLASSPATH_PROPERTY
         + FAKE_CONTEXT + "=" + FAKE_CONTEXT_CLASSPATH + "\n", result);
 
-    result = ts.exec("config -t t -s table.classpath.context=" + FAKE_CONTEXT);
-    assertEquals(
-        "root@miniInstance t> config -t t -s table.classpath.context=" + FAKE_CONTEXT + "\n",
-        result);
+    result = ts.exec("config -t " + tableName + " -s " + Property.TABLE_CLASSLOADER_CONTEXT.getKey()
+        + "=" + FAKE_CONTEXT);
+    assertEquals("root@miniInstance " + tableName + "> config -t " + tableName + " -s "
+        + Property.TABLE_CLASSLOADER_CONTEXT.getKey() + "=" + FAKE_CONTEXT + "\n", result);
 
     result = ts.exec("setshelliter -pn baz -n reverse -p 21 -class " + VALUE_REVERSING_ITERATOR);
     assertTrue(result.contains("The iterator class does not implement OptionDescriber"));
@@ -1876,9 +1966,9 @@ public class ShellServerIT extends SharedMiniClusterBase {
 
     setupRealContextPath();
     // Define a new classloader context, but don't set it on the table
-    result = ts.exec("config -s " + Property.VFS_CONTEXT_CLASSPATH_PROPERTY + REAL_CONTEXT + "="
+    result = ts.exec("config -s " + VFS_CONTEXT_CLASSPATH_PROPERTY + REAL_CONTEXT + "="
         + REAL_CONTEXT_CLASSPATH);
-    assertEquals("root@miniInstance t> config -s " + Property.VFS_CONTEXT_CLASSPATH_PROPERTY
+    assertEquals("root@miniInstance " + tableName + "> config -s " + VFS_CONTEXT_CLASSPATH_PROPERTY
         + REAL_CONTEXT + "=" + REAL_CONTEXT_CLASSPATH + "\n", result);
     // Override the table classloader context with the REAL implementation of
     // ValueReversingIterator, which does reverse the value.
@@ -1904,7 +1994,7 @@ public class ShellServerIT extends SharedMiniClusterBase {
     assertEquals(11, result.split("\n").length);
     assertTrue(result.contains("eulav"));
     assertFalse(result.contains("value"));
-    ts.exec("deletetable -f t");
+    ts.exec("deletetable -f " + tableName);
   }
 
   /**
@@ -1915,14 +2005,14 @@ public class ShellServerIT extends SharedMiniClusterBase {
    */
   @Test
   public void testScanTableWithIterSetWithoutProfile() throws Exception {
-    final String table = name.getMethodName();
+    final String table = getUniqueNames(1)[0];
 
     // create a table
     ts.exec("createtable " + table, true);
 
     // add some data
     ts.exec("insert foo a b c", true);
-    ts.exec("scan", true, "foo a:b []    c");
+    ts.exec("scan", true, "foo a:b []\tc");
 
     // create a normal iterator while in current table context
     ts.input.set("\n1000\n\n");
@@ -1940,7 +2030,7 @@ public class ShellServerIT extends SharedMiniClusterBase {
     // add some data
     ts.exec("insert foo a b c", true);
     ts.exec("notable");
-    ts.exec("scan -t " + table, true, "foo a:b []    c");
+    ts.exec("scan -t " + table, true, "foo a:b []\tc");
 
     // create a normal iterator which in current table context
     ts.input.set("\n1000\n\n");
@@ -1961,7 +2051,7 @@ public class ShellServerIT extends SharedMiniClusterBase {
    */
   @Test
   public void importDirectoryCmdFmt() throws Exception {
-    final String table = name.getMethodName();
+    final String table = getUniqueNames(1)[0];
 
     File importDir = new File(rootPath, "import_" + table);
     assertTrue(importDir.mkdir());
@@ -1978,6 +2068,17 @@ public class ShellServerIT extends SharedMiniClusterBase {
 
     // validate -t option is used.
     ts.exec(String.format("importdirectory -t %s %s %s false", table, importDir, errorsDir), true);
+
+    // validate -t option is used.
+    ts.exec(String.format("importdirectory -t %s %s %s false", table, importDir, errorsDir), true);
+
+    // validate -t and -i option is used with new bulk import.
+    // This will fail as there are no files in the import directory
+    ts.exec(String.format("importdirectory -t %s %s false", table, importDir), false);
+
+    // validate -t and -i option is used with new bulk import.
+    // This should pass even if no files in import directory. Empty import dir is ignored.
+    ts.exec(String.format("importdirectory -t %s %s false -i", table, importDir), true);
 
     // validate original cmd format.
     ts.exec(String.format("table %s", table), true);
@@ -2095,7 +2196,8 @@ public class ShellServerIT extends SharedMiniClusterBase {
   }
 
   private static void assertMatches(String output, String pattern) {
-    assertTrue("Pattern " + pattern + " did not match output : " + output, output.matches(pattern));
+    var p = Pattern.compile(pattern).asMatchPredicate();
+    assertTrue("Pattern " + pattern + " did not match output : " + output, p.test(output));
   }
 
   private static void assertNotContains(String output, String subsequence) {
@@ -2105,18 +2207,21 @@ public class ShellServerIT extends SharedMiniClusterBase {
 
   @Test
   public void testSummaries() throws Exception {
-    ts.exec("createtable summary");
-    ts.exec("config -t summary -s table.summarizer.del=" + DeletesSummarizer.class.getName());
-    ts.exec("config -t summary -s table.summarizer.fam=" + FamilySummarizer.class.getName());
+    String tableName = getUniqueNames(1)[0];
+    ts.exec("createtable " + tableName);
+    ts.exec(
+        "config -t " + tableName + " -s table.summarizer.del=" + DeletesSummarizer.class.getName());
+    ts.exec(
+        "config -t " + tableName + " -s table.summarizer.fam=" + FamilySummarizer.class.getName());
 
-    ts.exec("addsplits -t summary r1 r2");
+    ts.exec("addsplits -t " + tableName + " r1 r2");
     ts.exec("insert r1 f1 q1 v1");
     ts.exec("insert r2 f2 q1 v3");
     ts.exec("insert r2 f2 q2 v4");
     ts.exec("insert r3 f3 q1 v5");
     ts.exec("insert r3 f3 q2 v6");
     ts.exec("insert r3 f3 q3 v7");
-    ts.exec("flush -t summary -w");
+    ts.exec("flush -t " + tableName + " -w");
 
     String output = ts.exec("summaries");
     assertMatches(output, "(?sm).*^.*deletes\\s+=\\s+0.*$.*");
@@ -2127,7 +2232,7 @@ public class ShellServerIT extends SharedMiniClusterBase {
 
     ts.exec("delete r1 f1 q2");
     ts.exec("delete r2 f2 q1");
-    ts.exec("flush -t summary -w");
+    ts.exec("flush -t " + tableName + " -w");
 
     output = ts.exec("summaries");
     assertMatches(output, "(?sm).*^.*deletes\\s+=\\s+2.*$.*");
@@ -2172,19 +2277,21 @@ public class ShellServerIT extends SharedMiniClusterBase {
 
   @Test
   public void testSummarySelection() throws Exception {
-    ts.exec("createtable summary2");
+    String tableName = getUniqueNames(1)[0];
+    ts.exec("createtable " + tableName);
     // will create a few files and do not want them compacted
-    ts.exec("config -t summary2 -s " + Property.TABLE_MAJC_RATIO + "=10");
+    ts.exec("config -t " + tableName + " -s " + Property.TABLE_MAJC_RATIO + "=10");
 
     ts.exec("insert r1 f1 q1 v1");
     ts.exec("insert r2 f2 q1 v2");
-    ts.exec("flush -t summary2 -w");
+    ts.exec("flush -t " + tableName + " -w");
 
-    ts.exec("config -t summary2 -s table.summarizer.fam=" + FamilySummarizer.class.getName());
+    ts.exec(
+        "config -t " + tableName + " -s table.summarizer.fam=" + FamilySummarizer.class.getName());
 
     ts.exec("insert r1 f2 q1 v3");
     ts.exec("insert r3 f3 q1 v4");
-    ts.exec("flush -t summary2 -w");
+    ts.exec("flush -t " + tableName + " -w");
 
     String output = ts.exec("summaries");
     assertNotContains(output, "c:f1");
@@ -2194,7 +2301,7 @@ public class ShellServerIT extends SharedMiniClusterBase {
     assertMatches(output, "(?sm).*^.*total[:]2[,]\\s+missing[:]1[,]\\s+extra[:]0.*$.*");
 
     // compact only the file missing summary info
-    ts.exec("compact -t summary2 --sf-no-summary -w");
+    ts.exec("compact -t " + tableName + " --sf-no-summary -w");
     output = ts.exec("summaries");
     assertMatches(output, "(?sm).*^.*c:f1\\s+=\\s+1.*$.*");
     assertMatches(output, "(?sm).*^.*c:f2\\s+=\\s+2.*$.*");
@@ -2203,7 +2310,7 @@ public class ShellServerIT extends SharedMiniClusterBase {
     assertMatches(output, "(?sm).*^.*total[:]2[,]\\s+missing[:]0[,]\\s+extra[:]0.*$.*");
 
     // create a situation where files has summary data outside of tablet
-    ts.exec("addsplits -t summary2 r2");
+    ts.exec("addsplits -t " + tableName + " r2");
     output = ts.exec("summaries -e r2");
     assertMatches(output, "(?sm).*^.*c:f1\\s+=\\s+1.*$.*");
     assertMatches(output, "(?sm).*^.*c:f2\\s+=\\s+2.*$.*");
@@ -2212,7 +2319,7 @@ public class ShellServerIT extends SharedMiniClusterBase {
     assertMatches(output, "(?sm).*^.*total[:]2[,]\\s+missing[:]0[,]\\s+extra[:]1.*$.*");
 
     // compact only the files with extra summary info
-    ts.exec("compact -t summary2 --sf-extra-summary -w");
+    ts.exec("compact -t " + tableName + " --sf-extra-summary -w");
     output = ts.exec("summaries -e r2");
     assertMatches(output, "(?sm).*^.*c:f1\\s+=\\s+1.*$.*");
     assertMatches(output, "(?sm).*^.*c:f2\\s+=\\s+2.*$.*");
@@ -2223,11 +2330,11 @@ public class ShellServerIT extends SharedMiniClusterBase {
 
   @Test
   public void testCreateTableWithLocalityGroups() throws Exception {
-    final String table = name.getMethodName();
+    final String table = getUniqueNames(1)[0];
     ts.exec("createtable " + table + " -l locg1=fam1,fam2", true);
     try (AccumuloClient accumuloClient = Accumulo.newClient().from(getClientProps()).build()) {
       Map<String,Set<Text>> lMap = accumuloClient.tableOperations().getLocalityGroups(table);
-      Set<Text> expectedColFams = new HashSet<>(Arrays.asList(new Text("fam1"), new Text("fam2")));
+      Set<Text> expectedColFams = Set.of(new Text("fam1"), new Text("fam2"));
       for (Entry<String,Set<Text>> entry : lMap.entrySet()) {
         assertEquals("locg1", entry.getKey());
         assertTrue(entry.getValue().containsAll(expectedColFams));
@@ -2243,14 +2350,14 @@ public class ShellServerIT extends SharedMiniClusterBase {
    */
   @Test
   public void testCreateTableWithMultipleLocalityGroups() throws Exception {
-    final String table = name.getMethodName();
+    final String table = getUniqueNames(1)[0];
     ts.exec("createtable " + table + " -l locg1=fam1,fam2 locg2=colfam1", true);
     try (AccumuloClient accumuloClient = Accumulo.newClient().from(getClientProps()).build()) {
       Map<String,Set<Text>> lMap = accumuloClient.tableOperations().getLocalityGroups(table);
       assertTrue(lMap.containsKey("locg1"));
       assertTrue(lMap.containsKey("locg2"));
-      Set<Text> expectedColFams1 = new HashSet<>(Arrays.asList(new Text("fam1"), new Text("fam2")));
-      Set<Text> expectedColFams2 = new HashSet<>(Arrays.asList(new Text("colfam1")));
+      Set<Text> expectedColFams1 = Set.of(new Text("fam1"), new Text("fam2"));
+      Set<Text> expectedColFams2 = Set.of(new Text("colfam1"));
       assertTrue(lMap.get("locg1").containsAll(expectedColFams1));
       assertTrue(lMap.get("locg2").containsAll(expectedColFams2));
       ts.exec("deletetable -f " + table);
@@ -2259,7 +2366,7 @@ public class ShellServerIT extends SharedMiniClusterBase {
 
   @Test
   public void testCreateTableWithLocalityGroupsBadArguments() throws IOException {
-    final String table = name.getMethodName();
+    final String table = getUniqueNames(1)[0];
     ts.exec("createtable " + table + " -l locg1 fam1,fam2", false);
     ts.exec("createtable " + table + "-l", false);
     ts.exec("createtable " + table + " -l locg1 = fam1,fam2", false);
@@ -2274,7 +2381,7 @@ public class ShellServerIT extends SharedMiniClusterBase {
   @Test
   public void testCreateTableWithIterators() throws Exception {
     final String tmpTable = "tmpTable";
-    final String table = name.getMethodName();
+    final String table = getUniqueNames(1)[0];
 
     // create iterator profile
     // Will use tmpTable for creating profile since setshelliter is requiring a table
@@ -2292,7 +2399,7 @@ public class ShellServerIT extends SharedMiniClusterBase {
     // create table making use of the iterator profile
     ts.exec("createtable " + table + " -i profile1:scan,minc", true);
     ts.exec("insert foo a b c", true);
-    ts.exec("scan", true, "foo a:b []    c");
+    ts.exec("scan", true, "foo a:b []\tc");
     ts.exec("sleep 6", true);
     ts.exec("scan", true, "", true);
     ts.exec("deletetable -f " + table);
@@ -2307,7 +2414,7 @@ public class ShellServerIT extends SharedMiniClusterBase {
   @Test
   public void testCreateTableWithMultipleIterators() throws Exception {
     final String tmpTable = "tmpTable";
-    final String table = name.getMethodName();
+    final String table = getUniqueNames(1)[0];
 
     // create iterator profile
     // Will use tmpTable for creating profile since setshelliter is requiring a table
@@ -2330,7 +2437,7 @@ public class ShellServerIT extends SharedMiniClusterBase {
     // create table making use of the iterator profiles
     ts.exec("createtable " + table + " -i profile1:scan,minc profile2:all ", true);
     ts.exec("insert foo a b c", true);
-    ts.exec("scan", true, "foo a:b []    c");
+    ts.exec("scan", true, "foo a:b []\tc");
     ts.exec("sleep 6", true);
     ts.exec("scan", true, "", true);
     output = ts.exec("listiter -t " + table + " -all");
@@ -2347,7 +2454,7 @@ public class ShellServerIT extends SharedMiniClusterBase {
   @Test
   public void testCreateTableWithIteratorsBadArguments() throws IOException {
     final String tmpTable = "tmpTable";
-    final String table = name.getMethodName();
+    final String table = getUniqueNames(1)[0];
     ts.exec("createtable " + tmpTable, true);
     String output = ts.exec("tables");
     assertTrue(output.contains(tmpTable));
@@ -2385,7 +2492,7 @@ public class ShellServerIT extends SharedMiniClusterBase {
    */
   @Test
   public void testCreateTableOffline() throws IOException {
-    final String tableName = name.getMethodName() + "_table";
+    final String tableName = getUniqueNames(1)[0];
     ts.exec("createtable " + tableName + " -o", true);
     String output = ts.exec("tables");
     assertTrue(output.contains(tableName));
@@ -2405,12 +2512,11 @@ public class ShellServerIT extends SharedMiniClusterBase {
   @Test
   public void testCreateTableWithSplitsFile1()
       throws IOException, AccumuloSecurityException, TableNotFoundException, AccumuloException {
-    String splitsFile = null;
+    String splitsFile = System.getProperty("user.dir") + "/target/splitFile";
     try (AccumuloClient client = Accumulo.newClient().from(getClientProps()).build()) {
-      splitsFile = System.getProperty("user.dir") + "/target/splitFile";
       generateSplitsFile(splitsFile, 1000, 12, false, false, true, false, false);
-      SortedSet<Text> expectedSplits = readSplitsFromFile(splitsFile, false);
-      final String tableName = name.getMethodName() + "_table";
+      SortedSet<Text> expectedSplits = readSplitsFromFile(splitsFile);
+      final String tableName = getUniqueNames(1)[0];
       ts.exec("createtable " + tableName + " -sf " + splitsFile, true);
       Collection<Text> createdSplits = client.tableOperations().listSplits(tableName);
       assertEquals(expectedSplits, new TreeSet<>(createdSplits));
@@ -2427,12 +2533,11 @@ public class ShellServerIT extends SharedMiniClusterBase {
   @Test
   public void testCreateTableWithSplitsFile2()
       throws IOException, AccumuloSecurityException, TableNotFoundException, AccumuloException {
-    String splitsFile = null;
+    String splitsFile = System.getProperty("user.dir") + "/target/splitFile";
     try (AccumuloClient client = Accumulo.newClient().from(getClientProps()).build()) {
-      splitsFile = System.getProperty("user.dir") + "/target/splitFile";
       generateSplitsFile(splitsFile, 300, 12, false, false, false, false, false);
-      SortedSet<Text> expectedSplits = readSplitsFromFile(splitsFile, false);
-      final String tableName = name.getMethodName() + "_table";
+      SortedSet<Text> expectedSplits = readSplitsFromFile(splitsFile);
+      final String tableName = getUniqueNames(1)[0];
       ts.exec("createtable " + tableName + " -sf " + splitsFile, true);
       Collection<Text> createdSplits = client.tableOperations().listSplits(tableName);
       assertEquals(expectedSplits, new TreeSet<>(createdSplits));
@@ -2449,12 +2554,11 @@ public class ShellServerIT extends SharedMiniClusterBase {
   @Test
   public void testCreateTableWithSplitsFile3()
       throws IOException, AccumuloSecurityException, TableNotFoundException, AccumuloException {
-    String splitsFile = null;
+    String splitsFile = System.getProperty("user.dir") + "/target/splitFile";
     try (AccumuloClient client = Accumulo.newClient().from(getClientProps()).build()) {
-      splitsFile = System.getProperty("user.dir") + "/target/splitFile";
       generateSplitsFile(splitsFile, 100, 23, false, true, true, false, false);
-      SortedSet<Text> expectedSplits = readSplitsFromFile(splitsFile, false);
-      final String tableName = name.getMethodName() + "_table";
+      SortedSet<Text> expectedSplits = readSplitsFromFile(splitsFile);
+      final String tableName = getUniqueNames(1)[0];
       ts.exec("createtable " + tableName + " -sf " + splitsFile, true);
       Collection<Text> createdSplits = client.tableOperations().listSplits(tableName);
       assertEquals(expectedSplits, new TreeSet<>(createdSplits));
@@ -2471,12 +2575,11 @@ public class ShellServerIT extends SharedMiniClusterBase {
   @Test
   public void testCreateTableWithSplitsFile4()
       throws IOException, AccumuloSecurityException, TableNotFoundException, AccumuloException {
-    String splitsFile = null;
+    String splitsFile = System.getProperty("user.dir") + "/target/splitFile";
     try (AccumuloClient client = Accumulo.newClient().from(getClientProps()).build()) {
-      splitsFile = System.getProperty("user.dir") + "/target/splitFile";
       generateSplitsFile(splitsFile, 100, 31, false, false, true, true, false);
-      SortedSet<Text> expectedSplits = readSplitsFromFile(splitsFile, false);
-      final String tableName = name.getMethodName() + "_table";
+      SortedSet<Text> expectedSplits = readSplitsFromFile(splitsFile);
+      final String tableName = getUniqueNames(1)[0];
       ts.exec("createtable " + tableName + " -sf " + splitsFile, true);
       Collection<Text> createdSplits = client.tableOperations().listSplits(tableName);
       assertEquals(expectedSplits, new TreeSet<>(createdSplits));
@@ -2493,12 +2596,11 @@ public class ShellServerIT extends SharedMiniClusterBase {
   @Test
   public void testCreateTableWithSplitsFile5()
       throws IOException, AccumuloSecurityException, TableNotFoundException, AccumuloException {
-    String splitsFile = null;
+    String splitsFile = System.getProperty("user.dir") + "/target/splitFile";
     try (AccumuloClient client = Accumulo.newClient().from(getClientProps()).build()) {
-      splitsFile = System.getProperty("user.dir") + "/target/splitFile";
       generateSplitsFile(splitsFile, 100, 32, false, false, true, false, true);
-      SortedSet<Text> expectedSplits = readSplitsFromFile(splitsFile, false);
-      final String tableName = name.getMethodName() + "_table";
+      SortedSet<Text> expectedSplits = readSplitsFromFile(splitsFile);
+      final String tableName = getUniqueNames(1)[0];
       ts.exec("createtable " + tableName + " -sf " + splitsFile, true);
       Collection<Text> createdSplits = client.tableOperations().listSplits(tableName);
       assertEquals(expectedSplits, new TreeSet<>(createdSplits));
@@ -2515,12 +2617,11 @@ public class ShellServerIT extends SharedMiniClusterBase {
   @Test
   public void testCreateTableWithSplitsFile6()
       throws IOException, AccumuloSecurityException, TableNotFoundException, AccumuloException {
-    String splitsFile = null;
+    String splitsFile = System.getProperty("user.dir") + "/target/splitFile";
     try (AccumuloClient client = Accumulo.newClient().from(getClientProps()).build()) {
-      splitsFile = System.getProperty("user.dir") + "/target/splitFile";
       generateSplitsFile(splitsFile, 100, 12, false, false, false, true, true);
-      SortedSet<Text> expectedSplits = readSplitsFromFile(splitsFile, false);
-      final String tableName = name.getMethodName() + "_table";
+      SortedSet<Text> expectedSplits = readSplitsFromFile(splitsFile);
+      final String tableName = getUniqueNames(1)[0];
       ts.exec("createtable " + tableName + " -sf " + splitsFile, true);
       Collection<Text> createdSplits = client.tableOperations().listSplits(tableName);
       assertEquals(expectedSplits, new TreeSet<>(createdSplits));
@@ -2537,12 +2638,11 @@ public class ShellServerIT extends SharedMiniClusterBase {
   @Test
   public void testCreateTableWithSplitsFile7()
       throws IOException, AccumuloSecurityException, TableNotFoundException, AccumuloException {
-    String splitsFile = null;
+    String splitsFile = System.getProperty("user.dir") + "/target/splitFile";
     try (AccumuloClient client = Accumulo.newClient().from(getClientProps()).build()) {
-      splitsFile = System.getProperty("user.dir") + "/target/splitFile";
       generateSplitsFile(splitsFile, 100, 12, false, false, true, true, true);
-      SortedSet<Text> expectedSplits = readSplitsFromFile(splitsFile, false);
-      final String tableName = name.getMethodName() + "_table";
+      SortedSet<Text> expectedSplits = readSplitsFromFile(splitsFile);
+      final String tableName = getUniqueNames(1)[0];
       ts.exec("createtable " + tableName + " -sf " + splitsFile, true);
       Collection<Text> createdSplits = client.tableOperations().listSplits(tableName);
       assertEquals(expectedSplits, new TreeSet<>(createdSplits));
@@ -2559,12 +2659,11 @@ public class ShellServerIT extends SharedMiniClusterBase {
   @Test(expected = org.apache.accumulo.core.client.TableNotFoundException.class)
   public void testCreateTableWithEmptySplitFile()
       throws IOException, AccumuloSecurityException, TableNotFoundException, AccumuloException {
-    String splitsFile = null;
+    String splitsFile = System.getProperty("user.dir") + "/target/splitFile";
     try (AccumuloClient client = Accumulo.newClient().from(getClientProps()).build()) {
-      splitsFile = System.getProperty("user.dir") + "/target/splitFile";
       generateSplitsFile(splitsFile, 0, 0, false, false, false, false, false);
-      SortedSet<Text> expectedSplits = readSplitsFromFile(splitsFile, false);
-      final String tableName = name.getMethodName() + "_table";
+      SortedSet<Text> expectedSplits = readSplitsFromFile(splitsFile);
+      final String tableName = getUniqueNames(1)[0];
       ts.exec("createtable " + tableName + " -sf " + splitsFile, false);
       Collection<Text> createdSplits = client.tableOperations().listSplits(tableName);
       assertEquals(expectedSplits, new TreeSet<>(createdSplits));
@@ -2581,11 +2680,14 @@ public class ShellServerIT extends SharedMiniClusterBase {
       throws IOException, AccumuloSecurityException, TableNotFoundException, AccumuloException {
     // create a table and add some splits
     try (AccumuloClient client = Accumulo.newClient().from(getClientProps()).build()) {
-      final String tableName1 = name.getMethodName() + "_table1";
-      ts.exec("createtable " + tableName1, true);
+      final String[] tableNames = getUniqueNames(2);
+      final String tableName0 = tableNames[0];
+      final String tableName2 = tableNames[1];
+
+      ts.exec("createtable " + tableName0, true);
       String output = ts.exec("tables", true);
-      assertTrue(output.contains(tableName1));
-      ts.exec("table " + tableName1, true);
+      assertTrue(output.contains(tableName0));
+      ts.exec("table " + tableName0, true);
       // add splits to this table using the addsplits command.
       List<Text> splits = new ArrayList<>();
       splits.add(new Text("ccccc"));
@@ -2596,14 +2698,13 @@ public class ShellServerIT extends SharedMiniClusterBase {
           + splits.get(3), true);
       // Now create a table that will used the previous tables splits and create them at table
       // creation
-      final String tableName2 = name.getMethodName() + "_table2";
-      ts.exec("createtable " + tableName2 + " --copy-splits " + tableName1, true);
-      ts.exec("table " + tableName1, true);
+      ts.exec("createtable " + tableName2 + " --copy-splits " + tableName0, true);
+      ts.exec("table " + tableName0, true);
       String tablesOutput = ts.exec("tables", true);
       assertTrue(tablesOutput.contains(tableName2));
       Collection<Text> createdSplits = client.tableOperations().listSplits(tableName2);
       assertEquals(new TreeSet<>(splits), new TreeSet<>(createdSplits));
-      ts.exec("deletetable -f " + tableName1, true);
+      ts.exec("deletetable -f " + tableName0, true);
       ts.exec("deletetable -f " + tableName2, true);
     }
   }
@@ -2616,12 +2717,11 @@ public class ShellServerIT extends SharedMiniClusterBase {
   @Test
   public void testCreateTableWithBinarySplitsFile1()
       throws IOException, AccumuloSecurityException, TableNotFoundException, AccumuloException {
-    String splitsFile = null;
+    String splitsFile = System.getProperty("user.dir") + "/target/splitFile";
     try (AccumuloClient client = Accumulo.newClient().from(getClientProps()).build()) {
-      splitsFile = System.getProperty("user.dir") + "/target/splitFile";
       generateSplitsFile(splitsFile, 200, 12, true, true, true, false, false);
-      SortedSet<Text> expectedSplits = readSplitsFromFile(splitsFile, false);
-      final String tableName = name.getMethodName() + "_table";
+      SortedSet<Text> expectedSplits = readSplitsFromFile(splitsFile);
+      final String tableName = getUniqueNames(1)[0];
       ts.exec("createtable " + tableName + " -sf " + splitsFile, true);
       Collection<Text> createdSplits = client.tableOperations().listSplits(tableName);
       assertEquals(expectedSplits, new TreeSet<>(createdSplits));
@@ -2638,12 +2738,11 @@ public class ShellServerIT extends SharedMiniClusterBase {
   @Test
   public void testCreateTableWithBinarySplitsFile2()
       throws IOException, AccumuloSecurityException, TableNotFoundException, AccumuloException {
-    String splitsFile = null;
+    String splitsFile = System.getProperty("user.dir") + "/target/splitFile";
     try (AccumuloClient client = Accumulo.newClient().from(getClientProps()).build()) {
-      splitsFile = System.getProperty("user.dir") + "/target/splitFile";
       generateSplitsFile(splitsFile, 300, 12, true, true, false, false, false);
-      SortedSet<Text> expectedSplits = readSplitsFromFile(splitsFile, false);
-      final String tableName = name.getMethodName() + "_table";
+      SortedSet<Text> expectedSplits = readSplitsFromFile(splitsFile);
+      final String tableName = getUniqueNames(1)[0];
       ts.exec("createtable " + tableName + " -sf " + splitsFile, true);
       Collection<Text> createdSplits = client.tableOperations().listSplits(tableName);
       assertEquals(expectedSplits, new TreeSet<>(createdSplits));
@@ -2660,12 +2759,11 @@ public class ShellServerIT extends SharedMiniClusterBase {
   @Test
   public void testCreateTableWithBinarySplitsFile3()
       throws IOException, AccumuloSecurityException, TableNotFoundException, AccumuloException {
-    String splitsFile = null;
+    String splitsFile = System.getProperty("user.dir") + "/target/splitFile";
     try (AccumuloClient client = Accumulo.newClient().from(getClientProps()).build()) {
-      splitsFile = System.getProperty("user.dir") + "/target/splitFile";
       generateSplitsFile(splitsFile, 100, 23, true, true, true, false, false);
-      SortedSet<Text> expectedSplits = readSplitsFromFile(splitsFile, false);
-      final String tableName = name.getMethodName() + "_table";
+      SortedSet<Text> expectedSplits = readSplitsFromFile(splitsFile);
+      final String tableName = getUniqueNames(1)[0];
       ts.exec("createtable " + tableName + " -sf " + splitsFile, true);
       Collection<Text> createdSplits = client.tableOperations().listSplits(tableName);
       assertEquals(expectedSplits, new TreeSet<>(createdSplits));
@@ -2682,12 +2780,11 @@ public class ShellServerIT extends SharedMiniClusterBase {
   @Test
   public void testCreateTableWithBinarySplitsFile4()
       throws IOException, AccumuloSecurityException, TableNotFoundException, AccumuloException {
-    String splitsFile = null;
+    String splitsFile = System.getProperty("user.dir") + "/target/splitFile";
     try (AccumuloClient client = Accumulo.newClient().from(getClientProps()).build()) {
-      splitsFile = System.getProperty("user.dir") + "/target/splitFile";
       generateSplitsFile(splitsFile, 100, 31, true, true, true, true, false);
-      SortedSet<Text> expectedSplits = readSplitsFromFile(splitsFile, false);
-      final String tableName = name.getMethodName() + "_table";
+      SortedSet<Text> expectedSplits = readSplitsFromFile(splitsFile);
+      final String tableName = getUniqueNames(1)[0];
       ts.exec("createtable " + tableName + " -sf " + splitsFile, true);
       Collection<Text> createdSplits = client.tableOperations().listSplits(tableName);
       assertEquals(expectedSplits, new TreeSet<>(createdSplits));
@@ -2704,12 +2801,11 @@ public class ShellServerIT extends SharedMiniClusterBase {
   @Test
   public void testCreateTableWithBinarySplitsFile5()
       throws IOException, AccumuloSecurityException, TableNotFoundException, AccumuloException {
-    String splitsFile = null;
+    String splitsFile = System.getProperty("user.dir") + "/target/splitFile";
     try (AccumuloClient client = Accumulo.newClient().from(getClientProps()).build()) {
-      splitsFile = System.getProperty("user.dir") + "/target/splitFile";
       generateSplitsFile(splitsFile, 100, 32, true, true, true, false, true);
-      SortedSet<Text> expectedSplits = readSplitsFromFile(splitsFile, false);
-      final String tableName = name.getMethodName() + "_table";
+      SortedSet<Text> expectedSplits = readSplitsFromFile(splitsFile);
+      final String tableName = getUniqueNames(1)[0];
       ts.exec("createtable " + tableName + " -sf " + splitsFile, true);
       Collection<Text> createdSplits = client.tableOperations().listSplits(tableName);
       assertEquals(expectedSplits, new TreeSet<>(createdSplits));
@@ -2726,12 +2822,11 @@ public class ShellServerIT extends SharedMiniClusterBase {
   @Test
   public void testCreateTableWithBinarySplitsFile6()
       throws IOException, AccumuloSecurityException, TableNotFoundException, AccumuloException {
-    String splitsFile = null;
+    String splitsFile = System.getProperty("user.dir") + "/target/splitFile";
     try (AccumuloClient client = Accumulo.newClient().from(getClientProps()).build()) {
-      splitsFile = System.getProperty("user.dir") + "/target/splitFile";
       generateSplitsFile(splitsFile, 100, 12, true, true, false, true, true);
-      SortedSet<Text> expectedSplits = readSplitsFromFile(splitsFile, false);
-      final String tableName = name.getMethodName() + "_table";
+      SortedSet<Text> expectedSplits = readSplitsFromFile(splitsFile);
+      final String tableName = getUniqueNames(1)[0];
       ts.exec("createtable " + tableName + " -sf " + splitsFile, true);
       Collection<Text> createdSplits = client.tableOperations().listSplits(tableName);
       assertEquals(expectedSplits, new TreeSet<>(createdSplits));
@@ -2748,12 +2843,11 @@ public class ShellServerIT extends SharedMiniClusterBase {
   @Test
   public void testCreateTableWithBinarySplitsFile7()
       throws IOException, AccumuloSecurityException, TableNotFoundException, AccumuloException {
-    String splitsFile = null;
+    String splitsFile = System.getProperty("user.dir") + "/target/splitFile";
     try (AccumuloClient client = Accumulo.newClient().from(getClientProps()).build()) {
-      splitsFile = System.getProperty("user.dir") + "/target/splitFile";
       generateSplitsFile(splitsFile, 100, 12, true, true, true, true, true);
-      SortedSet<Text> expectedSplits = readSplitsFromFile(splitsFile, false);
-      final String tableName = name.getMethodName() + "_table";
+      SortedSet<Text> expectedSplits = readSplitsFromFile(splitsFile);
+      final String tableName = getUniqueNames(1)[0];
       ts.exec("createtable " + tableName + " -sf " + splitsFile, true);
       Collection<Text> createdSplits = client.tableOperations().listSplits(tableName);
       assertEquals(expectedSplits, new TreeSet<>(createdSplits));
@@ -2762,13 +2856,12 @@ public class ShellServerIT extends SharedMiniClusterBase {
     }
   }
 
-  private SortedSet<Text> readSplitsFromFile(final String splitsFile, boolean decode)
-      throws IOException {
+  private SortedSet<Text> readSplitsFromFile(final String splitsFile) throws IOException {
     SortedSet<Text> splits = new TreeSet<>();
     try (BufferedReader reader = newBufferedReader(Paths.get(splitsFile))) {
       String split;
       while ((split = reader.readLine()) != null) {
-        Text unencodedString = decode(split, decode);
+        Text unencodedString = decode(split);
         if (unencodedString != null)
           splits.add(unencodedString);
       }
@@ -2783,7 +2876,7 @@ public class ShellServerIT extends SharedMiniClusterBase {
     java.nio.file.Path splitsPath = java.nio.file.Paths.get(splitsFile);
     int insertAt = (len % 2 == 0) ? len / 2 : (len + 1) / 2;
     Collection<Text> sortedSplits = null;
-    Collection<Text> randomSplits = null;
+    Collection<Text> randomSplits;
 
     if (binarySplits)
       randomSplits = generateBinarySplits(numItems, len);
@@ -2819,23 +2912,18 @@ public class ShellServerIT extends SharedMiniClusterBase {
     return splits;
   }
 
-  @SuppressFBWarnings(value = "PREDICTABLE_RANDOM",
-      justification = "predictable random is okay for testing")
   private Collection<Text> generateBinarySplits(final int numItems, final int len) {
     Set<Text> splits = new HashSet<>();
-    Random rand = new Random();
     for (int i = 0; i < numItems; i++) {
       byte[] split = new byte[len];
-      rand.nextBytes(split);
+      random.nextBytes(split);
       splits.add(new Text(split));
     }
     return splits;
   }
 
   private Text getRandomText(final int len) {
-    int desiredLen = len;
-    if (len > 32)
-      desiredLen = 32;
+    int desiredLen = Math.min(len, 32);
     return new Text(
         String.valueOf(UUID.randomUUID()).replaceAll("-", "").substring(0, desiredLen - 1));
   }
@@ -2846,9 +2934,9 @@ public class ShellServerIT extends SharedMiniClusterBase {
     return encode ? Base64.getEncoder().encodeToString(TextUtil.getBytes(text)) : text.toString();
   }
 
-  private Text decode(final String text, final boolean decode) {
+  private Text decode(final String text) {
     if (requireNonNull(text).isBlank())
       return null;
-    return decode ? new Text(Base64.getDecoder().decode(text)) : new Text(text);
+    return new Text(text);
   }
 }
