@@ -26,7 +26,6 @@ import static org.junit.Assert.assertTrue;
 import java.io.IOException;
 import java.util.Arrays;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
@@ -194,7 +193,7 @@ public class PermissionsIT extends AccumuloClusterHarness {
         } catch (AccumuloSecurityException e) {
           loginAs(rootUser);
           if (e.getSecurityErrorCode() != SecurityErrorCode.PERMISSION_DENIED
-              || map(root_client.tableOperations().getProperties(tableName))
+              || root_client.tableOperations().getConfiguration(tableName)
                   .get(Property.TABLE_BLOOM_ERRORRATE.getKey()).equals("003.14159%"))
             throw e;
         }
@@ -209,7 +208,7 @@ public class PermissionsIT extends AccumuloClusterHarness {
         } catch (AccumuloSecurityException e) {
           loginAs(rootUser);
           if (e.getSecurityErrorCode() != SecurityErrorCode.PERMISSION_DENIED
-              || !map(root_client.tableOperations().getProperties(tableName))
+              || !root_client.tableOperations().getConfiguration(tableName)
                   .get(Property.TABLE_BLOOM_ERRORRATE.getKey()).equals("003.14159%"))
             throw e;
         }
@@ -278,7 +277,35 @@ public class PermissionsIT extends AccumuloClusterHarness {
         }
         break;
       case SYSTEM:
-        // test for system permission would go here
+        try {
+          // Test setProperty
+          loginAs(testUser);
+          test_user_client.instanceOperations()
+              .setProperty(Property.TSERV_TOTAL_MUTATION_QUEUE_MAX.getKey(), "10000");
+          throw new IllegalStateException("Should NOT be able to set System Property");
+        } catch (AccumuloSecurityException e) {
+          loginAs(rootUser);
+          if (e.getSecurityErrorCode() != SecurityErrorCode.PERMISSION_DENIED
+              || root_client.instanceOperations().getSystemConfiguration()
+                  .get(Property.TSERV_TOTAL_MUTATION_QUEUE_MAX.getKey()).equals("10000"))
+            throw e;
+        }
+        // Test removal of property
+        loginAs(rootUser);
+        root_client.instanceOperations()
+            .setProperty(Property.TSERV_TOTAL_MUTATION_QUEUE_MAX.getKey(), "10000");
+        try {
+          loginAs(testUser);
+          test_user_client.instanceOperations()
+              .removeProperty(Property.TSERV_TOTAL_MUTATION_QUEUE_MAX.getKey());
+          throw new IllegalStateException("Should NOT be able to remove System Property");
+        } catch (AccumuloSecurityException e) {
+          loginAs(rootUser);
+          if (e.getSecurityErrorCode() != SecurityErrorCode.PERMISSION_DENIED
+              || !root_client.instanceOperations().getSystemConfiguration()
+                  .get(Property.TSERV_TOTAL_MUTATION_QUEUE_MAX.getKey()).equals("10000"))
+            throw e;
+        }
         break;
       case CREATE_NAMESPACE:
         namespace = "__CREATE_NAMESPACE_WITHOUT_PERM_TEST__";
@@ -320,7 +347,7 @@ public class PermissionsIT extends AccumuloClusterHarness {
         } catch (AccumuloSecurityException e) {
           loginAs(rootUser);
           if (e.getSecurityErrorCode() != SecurityErrorCode.PERMISSION_DENIED
-              || map(root_client.namespaceOperations().getProperties(namespace))
+              || root_client.namespaceOperations().getConfiguration(namespace)
                   .get(Property.TABLE_BLOOM_ERRORRATE.getKey()).equals("003.14159%"))
             throw e;
         }
@@ -335,7 +362,7 @@ public class PermissionsIT extends AccumuloClusterHarness {
         } catch (AccumuloSecurityException e) {
           loginAs(rootUser);
           if (e.getSecurityErrorCode() != SecurityErrorCode.PERMISSION_DENIED
-              || !map(root_client.namespaceOperations().getProperties(namespace))
+              || !root_client.namespaceOperations().getConfiguration(namespace)
                   .get(Property.TABLE_BLOOM_ERRORRATE.getKey()).equals("003.14159%"))
             throw e;
         }
@@ -412,14 +439,14 @@ public class PermissionsIT extends AccumuloClusterHarness {
         test_user_client.tableOperations().setProperty(tableName,
             Property.TABLE_BLOOM_ERRORRATE.getKey(), "003.14159%");
         loginAs(rootUser);
-        Map<String,String> properties = map(root_client.tableOperations().getProperties(tableName));
+        Map<String,String> properties = root_client.tableOperations().getConfiguration(tableName);
         if (!properties.get(Property.TABLE_BLOOM_ERRORRATE.getKey()).equals("003.14159%"))
           throw new IllegalStateException("Should be able to set a table property");
         loginAs(testUser);
         test_user_client.tableOperations().removeProperty(tableName,
             Property.TABLE_BLOOM_ERRORRATE.getKey());
         loginAs(rootUser);
-        properties = map(root_client.tableOperations().getProperties(tableName));
+        properties = root_client.tableOperations().getConfiguration(tableName);
         if (properties.get(Property.TABLE_BLOOM_ERRORRATE.getKey()).equals("003.14159%"))
           throw new IllegalStateException("Should be able to remove a table property");
         loginAs(testUser);
@@ -464,7 +491,22 @@ public class PermissionsIT extends AccumuloClusterHarness {
           throw new IllegalStateException("Should be able to alter a user");
         break;
       case SYSTEM:
-        // test for system permission would go here
+        // Test setProperty
+        loginAs(testUser);
+        test_user_client.instanceOperations()
+            .setProperty(Property.TSERV_TOTAL_MUTATION_QUEUE_MAX.getKey(), "10000");
+        loginAs(rootUser);
+        if (!root_client.instanceOperations().getSystemConfiguration()
+            .get(Property.TSERV_TOTAL_MUTATION_QUEUE_MAX.getKey()).equals("10000"))
+          throw new IllegalStateException("Should be able to set system property");
+        // Test removal of property
+        loginAs(testUser);
+        test_user_client.instanceOperations()
+            .removeProperty(Property.TSERV_TOTAL_MUTATION_QUEUE_MAX.getKey());
+        loginAs(rootUser);
+        if (root_client.instanceOperations().getSystemConfiguration()
+            .get(Property.TSERV_TOTAL_MUTATION_QUEUE_MAX.getKey()).equals("10000"))
+          throw new IllegalStateException("Should be able remove systemproperty");
         break;
       case CREATE_NAMESPACE:
         namespace = "__CREATE_NAMESPACE_WITH_PERM_TEST__";
@@ -493,15 +535,14 @@ public class PermissionsIT extends AccumuloClusterHarness {
         test_user_client.namespaceOperations().setProperty(namespace,
             Property.TABLE_BLOOM_ERRORRATE.getKey(), "003.14159%");
         loginAs(rootUser);
-        Map<String,String> propies =
-            map(root_client.namespaceOperations().getProperties(namespace));
+        Map<String,String> propies = root_client.namespaceOperations().getConfiguration(namespace);
         if (!propies.get(Property.TABLE_BLOOM_ERRORRATE.getKey()).equals("003.14159%"))
           throw new IllegalStateException("Should be able to set a table property");
         loginAs(testUser);
         test_user_client.namespaceOperations().removeProperty(namespace,
             Property.TABLE_BLOOM_ERRORRATE.getKey());
         loginAs(rootUser);
-        propies = map(root_client.namespaceOperations().getProperties(namespace));
+        propies = root_client.namespaceOperations().getConfiguration(namespace);
         if (propies.get(Property.TABLE_BLOOM_ERRORRATE.getKey()).equals("003.14159%"))
           throw new IllegalStateException("Should be able to remove a table property");
         loginAs(testUser);
@@ -664,16 +705,33 @@ public class PermissionsIT extends AccumuloClusterHarness {
           if (e.getSecurityErrorCode() != SecurityErrorCode.PERMISSION_DENIED)
             throw e;
         }
+        // Now see if we can flush
+        try {
+          test_user_client.tableOperations().flush(tableName, new Text("myrow"), new Text("myrow~"),
+              false);
+          throw new IllegalStateException("Should NOT be able to flsuh a table");
+        } catch (AccumuloSecurityException e) {
+          if (e.getSecurityErrorCode() != SecurityErrorCode.PERMISSION_DENIED)
+            throw e;
+        }
         break;
       case BULK_IMPORT:
         // test for bulk import permission would go here
         break;
       case ALTER_TABLE:
         Map<String,Set<Text>> groups = new HashMap<>();
-        groups.put("tgroup", new HashSet<>(Arrays.asList(new Text("t1"), new Text("t2"))));
+        groups.put("tgroup", Set.of(new Text("t1"), new Text("t2")));
         try {
           test_user_client.tableOperations().setLocalityGroups(tableName, groups);
           throw new IllegalStateException("User should not be able to set locality groups");
+        } catch (AccumuloSecurityException e) {
+          if (e.getSecurityErrorCode() != SecurityErrorCode.PERMISSION_DENIED)
+            throw e;
+        }
+        try {
+          test_user_client.tableOperations().flush(tableName, new Text("myrow"), new Text("myrow~"),
+              false);
+          throw new IllegalStateException("Should NOT be able to flush a table");
         } catch (AccumuloSecurityException e) {
           if (e.getSecurityErrorCode() != SecurityErrorCode.PERMISSION_DENIED)
             throw e;
@@ -728,6 +786,8 @@ public class PermissionsIT extends AccumuloClusterHarness {
         }
         break;
       case WRITE:
+        test_user_client.tableOperations().flush(tableName, new Text("myrow"), new Text("myrow~"),
+            false);
         try (BatchWriter bw = test_user_client.createBatchWriter(tableName)) {
           Mutation m = new Mutation(new Text("row"));
           m.put("a", "b", "c");
@@ -738,6 +798,8 @@ public class PermissionsIT extends AccumuloClusterHarness {
         // test for bulk import permission would go here
         break;
       case ALTER_TABLE:
+        test_user_client.tableOperations().flush(tableName, new Text("myrow"), new Text("myrow~"),
+            false);
         testArbitraryProperty(test_user_client, tableName, true);
         break;
       case DROP_TABLE:
@@ -798,11 +860,9 @@ public class PermissionsIT extends AccumuloClusterHarness {
       c.tableOperations().setProperty(tableName, propertyName, description1);
 
       // Loop through properties to make sure the new property is added to the list
-      int count = 0;
-      for (Entry<String,String> property : c.tableOperations().getProperties(tableName)) {
-        if (property.getKey().equals(propertyName) && property.getValue().equals(description1))
-          count++;
-      }
+      long count = c.tableOperations().getConfiguration(tableName).entrySet().stream()
+          .filter(e -> e.getKey().equals(propertyName) && e.getValue().equals(description1))
+          .count();
       assertEquals(count, 1);
 
       // Set the property as something different
@@ -810,22 +870,17 @@ public class PermissionsIT extends AccumuloClusterHarness {
       c.tableOperations().setProperty(tableName, propertyName, description2);
 
       // Loop through properties to make sure the new property is added to the list
-      count = 0;
-      for (Entry<String,String> property : c.tableOperations().getProperties(tableName)) {
-        if (property.getKey().equals(propertyName) && property.getValue().equals(description2))
-          count++;
-      }
+      count = c.tableOperations().getConfiguration(tableName).entrySet().stream()
+          .filter(e -> e.getKey().equals(propertyName) && e.getValue().equals(description2))
+          .count();
       assertEquals(count, 1);
 
       // Remove the property and make sure there is no longer a value associated with it
       c.tableOperations().removeProperty(tableName, propertyName);
 
       // Loop through properties to make sure the new property is added to the list
-      count = 0;
-      for (Entry<String,String> property : c.tableOperations().getProperties(tableName)) {
-        if (property.getKey().equals(propertyName))
-          count++;
-      }
+      count = c.tableOperations().getConfiguration(tableName).entrySet().stream()
+          .filter(e -> e.getKey().equals(propertyName)).count();
       assertEquals(count, 0);
       if (!havePerm)
         throw new IllegalStateException("User should not been able to alter property.");
